<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="vertical" >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/comments_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_comments"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datepicker_layout">
        </RelativeLayout>
        <Spinner
            android:id="@+id/locations_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TableLayout
            android:id="@+id/add_routes_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableLayout>
        <Button
            android:id="@+id/add_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_add"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>